--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_database: ^10.2.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  url_launcher: ^6.1.12
   flutter_localizations:
     sdk: flutter
 
@@ -48,8 +49,8 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
-    - assets/fonts/Tajawal/
-    - assets/fonts/Cairo/
+    - assets/fonts/Almarai/
+    - assets/fonts/Baloo_Bhaijaan_2/
 
   fonts:
     - family: BalooBhaijaan2
