--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.3
   hive_generator: ^2.0.1
   build_runner: ^2.4.6
   freezed: ^2.4.5
+  flutter_launcher_icons: ^0.13.1
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app_icon.png"
 
 flutter:
   uses-material-design: true
